Bug 87549 - new mail to mailing-list doesn't set focus to "subject" if "to" is prefilled
Summary: new mail to mailing-list doesn't set focus to "subject" if "to" is prefilled
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-08-20 00:39 UTC by Leo Savernik
Modified: 2009-08-05 21:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Leo Savernik 2004-08-20 00:39:22 UTC
Version:            (using KDE KDE 3.3.0)
Installed from:    Compiled From Sources

In KDE 3.2, when using new mail to mailing-list, KMail used to focus the "Subject" field regardless of "To" being prefilled or not.

In KDE 3.3 we have the opposite problem:
KMail focuses the "To" field, whether prefilled or not.

Steps to reproduce:
1. Invoke "New mail to mailing-list" in a folder that has a mailing-list-address associated with it.

Expected results:
Mailing-list address is prefilled into the "To" field.
Focus is set to "Subject" field.

Actual results:
Mailing-list address is prefilled into the "To" field.
Focus is set to "To" field such that the caret is located after the prefilled address.

I think it should only set the focus to the "To" field if it's empty, otherwise to the "Subject" field.
Comment 1 Tobias Schaefer 2004-08-20 07:22:40 UTC
This is a duplicate of #69438 which is marked as resolved, reopen #69438?
Comment 2 Leo Savernik 2004-08-20 11:22:06 UTC
No, this is no dupe. It's just the opposite wrongness described in bug 69438.

While in 69438 the focus was set to "Subject" unconditionally, in this bug it is set to "To" unconditionally.
Comment 3 Martin Koller 2009-08-01 21:43:11 UTC
SVN commit 1005697 by mkoller:

BUG: 87549

Set focus on subject field when we open the composer for a mail which
has the To: field set.


 M  +1 -0      kmcommands.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1005697
Comment 4 Thomas McGuire 2009-08-05 21:49:40 UTC
SVN commit 1007470 by tmcguire:

Backport r1005697 by mkoller from trunk to the 4.3 branch:

CCBUG: 87549

Set focus on subject field when we open the composer for a mail which
has the To: field set.



 M  +1 -0      kmcommands.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1007470