BUG: 87549

Set focus on subject field when we open the composer for a mail which
has the To: field set.

svn path=/trunk/KDE/kdepim/; revision=1005697